<resources>
    <string name="app_name">EZuppers</string>
    <string name="email">E-mail Zup</string>
    <string name="password">Senha</string>
    <string name="new_registration">Novo cadastro</string>
    <string name="login">Login</string>
    <string name="titleRegister">Seus dados opcionais ficarão ocultos até que você altere esta configuração em Perfil</string>
    <string name="descriptionLogo">imagem da logo do e-zuppers em baixo escrito conectando zuppers pelo mundo, com uma linha colorida</string>
    <string name="descriptionEmail">caixa de input para inserir e-mail da zup para login</string>
    <string name="descriptionPassword">caixa de input para inserir senha para login</string>
    <string name="descriptionNewRegister">texto para clicar e realizar novo cadastro</string>
    <string name="descriptionButton">Botão para click e realizar o login, com as cores azul zup</string>
    <string name="name">Nome</string>
    <string name="descriptionName">Caixa de input para digitar o nome</string>
    <string name="descriptionNickname">Caixa de input para digitar o apelido</string>
    <string name="birthDate">Data de nascimento</string>
    <string name="descriptionBirthDate">caixa de input para digitar a data de nascimento</string>
    <string name="cep">CEP</string>
    <string name="descriptionCEP">caixa de input para digitar o CEP</string>
    <string name="search">Buscar</string>
    <string name="descriptionLikes">Descrição</string>
    <string name="descriptionHobbies">caixa de input para digitar os seus hobbies e gostos</string>
    <string name="descriptionRoad">caixa de input para digitar endereço: Rua/ Av</string>
    <string name="number">Número</string>
    <string name="roadAv">Rua/AV</string>
    <string name="descriptionNumber">Caixa de input para colocar Número</string>
    <string name="complement">Complemento:</string>
    <string name="descriptionComplement">Caixa de input para digitar o complemento do endereço</string>
    <string name="interests">Interesses</string>
    <string name="descriptionInterests">Caixa de seleção para digitar interesses pessoais</string>
    <string name="gender">Identidade de gênero</string>
    <string name="sexualOrientation">Orientação Sexual</string>
    <string name="descriptionOrientation">Caixa de input para digitar o gênero</string>
    <string name="helperText">Ex: 07/05/1992</string>
    <string name="helperTextCep">Ex: 78048258</string>
    <string name="helperTextNumber">Ex: 306</string>
    <string name="helperTextAV">Ex: Avenida das Baleias</string>
    <string name="helperTextComplement">Ex: Edifício Oceano apto 06</string>
    <string name="helperTextInterests">Ex: Adoro Baleias, astronomia, oceano</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="country">País</string>
    <string name="descriptionCity">Caixa de input para digitar a cidade</string>
    <string name="descriptionState">Caixa de descrição para colocar o Estado</string>
    <string name="descriptionCountry">Caixa de descrição para digitar o país</string>
    <string name="register">Cadastro</string>
    <string name="helperTextPassword">Obs: Mínimo uma letra maiúscula, um carácter especial e 6 dígitos</string>
    <string name="pronoun">Pronome</string>
    <string name="descriptionPronoun">caixa de input para digitar o pronome</string>
    <string name="helperText_pronouns">Ex: Ele/Dele, Ela/Dela</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_img_description">Círculo laranja com ícone com a silhueta de uma pessoa dentro.</string>
    <string name="exit_txt">Sair</string>
    <string name="logout_icon_description">Ícone de porta aberta indicando que clicando aqui acontece o logout de usuário.</string>
    <string name="tv_name_profile">Nome completo</string>
    <string name="user_name_tv_description">Nome do usuário</string>
    <string name="favorite_btn_description">Coração indicando se o usuário é favorito</string>
    <string name="user_nickname_desc">Apelido do usuário</string>
    <string name="user_description_txt">Descrição, interesses, em poucas palavras</string>
    <string name="state_txt">Estado</string>
    <string name="home_state_user_profile_txt">Estado onde usuário reside</string>
    <string name="separator_txt">-</string>
    <string name="country_txt">Brasil</string>
    <string name="country_user_home_profile_txt">País onde o usuário reside</string>
    <string name="email_txt">E-mail:</string>
    <string name="email_value_txt">email@zup.com.br</string>
    <string name="birthdate_txt">Nascimento:</string>
    <string name="user_age_desc_txt">idade do usuário</string>
    <string name="age_value_txt">22/12/1986</string>
    <string name="city_txt">Cidade:</string>
    <string name="user_city_desc_txt">Cidade do usuário</string>
    <string name="user_city_value_txt">São Paulo</string>
    <string name="gender_txt">Gênero:</string>
    <string name="user_gender_value_desc">Gênero do usuário</string>
    <string name="user_gender_value_txt">Feminino</string>
    <string name="sexual_orientation_txt">Orientação Sexual:</string>
    <string name="user_sexual_orientation_desc">Orientação sexual do usuário</string>
    <string name="user_sexual_orientation_value_txt">Heterosexual</string>
    <string name="user_nickname_value_txt">Apelido</string>
    <string name="user_state_desc">Estado onde usuário reside</string>
    <string name="user_state_value_txt">SP</string>
    <string name="address_txt">Endereço:</string>
    <string name="road_name_desc_text">Nome da rua ou av do usuário</string>
    <string name="road_value_txt">Rua do User</string>
    <string name="comma_desc">vírgula</string>
    <string name="comma_value_txt">,</string>
    <string name="user_road_number_desc_txt">número</string>
    <string name="user_road_number_value_txt">307</string>
    <string name="user_adress_complement_desc_text">complemento do endereço</string>
    <string name="complement_txt">Complemento:</string>
    <string name="show_txt">Mostrar</string>
    <string name="show_optional_info_txt">Mostrar informações opcionais</string>
    <string name="pronoun_txt">Pronome</string>
    <string name="ele_ela_elu_txt">Ele/Ela/Elu</string>
    <string name="descriptionSplashZup">Imagem com o astronauta com um notebook no espaço com a lua escrito eu crio o futuro da tecnologia #orgulhoDeSerZupper</string>
    <string name="descriptionLogoSplash">Imagem com o logo do e-zuppers conectando zuppers pelo mundo, com a lista colorida em baixo</string>
    <string name="checkbox_optional">Concordo que minhas informações opcionais ficarão disponíveis no meu perfil para outros zuppers</string>
    <string name="descriptionCheckBox">Caixa de seleção para informar se concorda ou não com a exibição de suas informações no perfil</string>
    <string name="nameFeed">Joana Scheer</string>
    <string name="date">06 Ago</string>
    <string name="descriptionNameFeed">Texto com o nome do usuário</string>
    <string name="descriptionDateFeed">Texto com a data atual</string>
    <string name="textPersonFeed">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since …</string>
    <string name="like">Curtir</string>
    <string name="descriptionTextFeedPerson">Texto com o feed de noticias que o usuário escreveu</string>
    <string name="descriptionLike">Texto escrito curtir</string>
    <string name="publicationFeed">No que você está pensando?</string>
    <string name="descriptionFeedPost">Caixa de seleção para informar um post, com a pergunta no que está pensando?</string>
    <string name="feed_txt">Feed</string>
    <string name="zuppers_txt">Zuppers</string>
    <string name="favorites_txt">Favoritos</string>
    <string name="profile_txt">Perfil</string>
    <string name="blank_space_txt" />
    <string name="feed">Feed</string>
    <string name="state_dropdown_label">Estado</string>
    <string name="state_dropdown_helper">Selecione o estado desejado</string>
    <string name="city_dropdown_label">Cidade</string>
    <string name="city_dropdown_helper">Selecione a cidade desejada</string>
    <string name="zuppers_in">Zuppers em</string>
    <string name="userProfile">Perfil</string>
    <string name="descriptionButtonExit">Área do botão de sair</string>
    <string name="optionalButtonFind">Desejo ser encontrado por outros zuppers</string>
    <string name="Zuppers">Zuppers</string>
    <string name="found_zuppers">Zuppers encontrados</string>
    <string name="two_dot">:</string>
    <string name="quantity_example">0</string>
    <string name="profile">Perfil</string>
    <string name="description_ic_edit">Imagem de uma caneta/Lapis para edição das informações do perfil do usuário</string>
    <string name="salve">Salvar</string>
    <string name="editInformation">Editar informações</string>
    <string name="complementText">Complemento:</string>
    <string name="favorite">Favorito</string>
    <string name="amanda_txt">Amanda</string>
</resources>