<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvZupperItemList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="40dp"
            android:layout_height="@dimen/size_40"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/person_circle"
            android:contentDescription="@string/profile_img_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameZupper"
            android:layout_width="@dimen/width_0"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_16"
            android:contentDescription="@string/descriptionNameFeed"
            android:text="@string/nameFeed"
            android:textSize="@dimen/size_14"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivProfilePicture"
            app:layout_constraintLeft_toRightOf="@id/ivProfilePicture"
            app:layout_constraintRight_toLeftOf="@id/ivFavorite"
            app:layout_constraintTop_toTopOf="@id/ivProfilePicture" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFavorite"
            android:layout_width="@dimen/size_40"
            android:layout_height="@dimen/size_40"
            android:layout_margin="@dimen/margin_16"
            android:contentDescription="@string/favorite_btn_description"
            android:src="@drawable/ic_favorite_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvNameZupper"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>